# TabletDriverCleanup

./: .gitignore  Cargo.toml  README.md  TabletDriverCleanup.sln  build.ps1  cleanup.bat  cleanup.ps1
.github/workflows/: build.yml
VMulti/GAOMON HID 11-02-2018/: gaomonhid.cat  hidkmdf.sys  install_gaomonhiddriver.bat  remove_gaomonhiddriver.bat  vmulti.inf  vmulti.sys
VMulti/HUION HID 03-16-2018/: hidkmdf.sys  huionhid.cat  install_huionhiddriver.bat  vmulti.inf  vmulti.sys
VMulti/HUION HID 09-16-2014/: hidkmdf.sys  huionhid.cat  install_huionhiddriver.bat  remove_huionhiddriver.bat  vmulti.inf  vmulti.sys
WinUSB/Graphics Tablet 04-10-2014/: tabetdriveruninstall.bat
WinUSB/Graphics Tablet 04-10-2017/: TabletDriver.inf  tabetdriverinstall.bat  tabletdriver.cat
config/: device_identifiers.json  driver_identifiers.json  driver_package_identifiers.json
eng/: dry_run.bat  dump.bat  internal_config_only.bat  no_prompt_uninstall.bat
src/: lib.rs  main.rs
src/PnpUtil/: IPnpUtilParseable.cs  PnpUtilCommands.cs  PnpUtilDevice.cs  PnpUtilDriver.cs  PnpUtilReturnCode.cs  StringExtensions.cs
src/TabletDriverCleanup/: ConsoleUtility.cs  DeviceToRemove.cs  DriverInfToUninstall.cs  Enumerator.cs  Guids.cs  HeuristicSample.cs  ICleanupModule.cs  Program.cs  ProgramState.cs  Roots.xml  StringExtensions.cs  TabletDriverCleanup.csproj
src/TabletDriverCleanup/Services/: Device.cs  (+7 more)
src/cleanup_modules/: device_cleanup.rs  driver_cleanup.rs  driver_package_cleanup.rs  mod.rs
src/services/: identifiers.rs  interest.rs  mod.rs  regex_cache.rs  terminal.rs  windows.rs
(+8 files in other folders)
